# headless-orchestra

./: README.md  pyproject.toml
.cursor/: rules.md
agents/: pyproject.toml
api-layer/: pyproject.toml
api-layer/api_layer/: client.py  models.py
api-layer/tests/: test_client.py  test_client_jsonrpc.py  test_integration.py
docs/: AI_AGENTS_GUIDE.md  ARCHITECTURE.md  VISION.md
docs/producer-pal/: api-reference.md
garbage/: debug_producer_pal.py  debug_producer_pal_fixed.py  debug_sse_parsing.py  test_full_pipeline.py  test_integration.py  test_with_initialize.py
shared/: pyproject.toml
