[tool.poetry]
name = "headless-orchestra"
version = "0.1.0"
description = "Headless Orchestra mono-repo"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
mypy = "^1.8.0"
ruff = "^0.3.0"

[tool.poetry.workspace]
members = ["api-layer", "agents", "shared"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
